--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 RAKUTEN_API_KEY = "1018046434737566356"
+
+DB_USERNAME="root"
+DB_PASSWORD="242m943y774"
+DB_HOST="rds-mysql-server.cawcff15ebw6.ap-northeast-1.rds.amazonaws.com"
+DB_DATABASE="sampledb"
+
